<resources>
    <string name="app_name">JavaApp</string>
    <string name="CustomerName">Customer Name</string>
    <string name="ClassName">Class Name</string>
    <string name="ClassYear">Class Year</string>
    <string name="g">Annual Price\n</string>
    <string name="AnnualPrice">Annual Price</string>
    <string name="BiYearly">Bi-Yearly</string>
    <string name="MonthlyPrice">Monthly Price</string>
    <string name="AddClass">Add Class</string>
    <string name="BiYearly_Price">Bi-Yearly Price</string>
    <string name="BtnViewClass">View Classes</string>
    <string name="BtnViewClasses">View</string>
    <string name="AddClients">Add Clients</string>
    <string name="ViewClients">View Clients</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="EmailAddress">Email Address</string>
    <string name="PhoneNumber">Phone Number</string>
    <string name="addClientBtn">Add Client</string>
    <string name="AddInvoice">Add Inv</string>
    <string name="ViewInvoice">View Inv</string>
    <string name="ViewClass">View Classes</string>
    <string name="title_activity_dance_class_view">DanceClassView</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="ClientViewScreen">Client View Screen</string>
    <string name="DanceClassViewScreen">Dance Class View Screen</string>
    <string name="InvoiceViewScreen">Invoice View Screen</string>
    <string name="SelectClientName">Select Client Name</string>
    <string name="SelectClient">Select Client</string>
    <string name="SelectClass">Select Class</string>
    <string name="ByTheYear">By the year</string>
    <string name="Monthly">Monthly</string>
    <string name="PaymentOption">Select a payment option</string>
    <string name="select_client_hint">Select a Client</string>
    <string name="select_danceClass_hint">Select Dance Class</string>
    <string name="ClientSearchBtn">Search Client(s)</string>
    <string name="SignUpBtn">Sign Up</string>
    <string name="SearchAllOwing">Show Owing Clients</string>
    <string name="ShowAvailableClasses">Show Available Classes</string>
    <string name="AddSignUp">Sign Up</string>
    <string name="ViewSignUp">SignUps</string>
    <string name="ClassCapacity">Class Capacity</string>
    <string name="dance_class_app">Dance Class App</string>
    <string name="view_invoices">View Invoices</string>
    <string name="create_invoice">Create Invoice</string>
    <string name="sign_up_a_client">Sign Up a Client</string>
    <string name="view_sign_ups">View Sign Ups</string>
    <string name="view_classes">View Classes</string>
    <string name="add_a_class">Add a Class</string>
    <string name="view_client">View Client</string>
    <string name="add_client">Add Client</string>
    <string name="Search">Search</string>
    <string name="Unpaid">Unpaid</string>
    <string name="Paid">Paid</string>
    <string name="showBoth">Both</string>
    <string name="GenerateInvoice">Generate Invoice</string>
</resources>