<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddInvoices">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="243dp"
        android:layout_height="25dp"
        android:text="@string/PaymentOption"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:text="@string/SelectClass"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/classSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/bottomButtonsLayout"
        layout="@layout/bottom_buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/addInvoiceToDbBtn"
        android:layout_width="185dp"
        android:layout_height="66dp"
        android:layout_marginBottom="128dp"
        android:text="@string/AddInvoiceBtn"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Spinner
        android:id="@+id/clientSpinner"
        android:prompt="@string/select_client_hint"
        android:layout_width="208dp"
        android:layout_height="55dp"
        android:background="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/addInvoiceToDbBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.17" />

    <Spinner
        android:id="@+id/classSpinner"
        android:prompt="@string/select_danceClass_hint"
        android:layout_width="208dp"
        android:layout_height="55dp"
        android:background="@drawable/spinner_background"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/addInvoiceToDbBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.078"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.485" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:text="@string/SelectClient"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/clientSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/addInvoiceToDbBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/classSpinner"
        app:layout_constraintVertical_bias="0.837">

        <RadioButton
            android:id="@+id/rb_yearlyPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ByTheYear" />

        <RadioButton
            android:id="@+id/rb_biYearlyPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/BiYearly" />

        <RadioButton
            android:id="@+id/rb_monthlyPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Monthly" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>