<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClassSignUp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:text="@string/SelectClass"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/classSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clientSpinner"
        app:layout_constraintVertical_bias="1.0" />

    <include
        android:id="@+id/bottomButtonsLayout"
        layout="@layout/bottom_buttons_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/signUpBtn"
        android:layout_width="185dp"
        android:layout_height="66dp"
        android:layout_marginBottom="128dp"
        android:text="@string/SignUpBtn"
        app:layout_constraintBottom_toTopOf="@+id/bottomButtonsLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.787" />

    <Spinner
        android:id="@+id/clientSpinner"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/spinner_background"
        android:prompt="@string/select_client_hint"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.168" />

    <Spinner
        android:id="@+id/classSpinner"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:background="@drawable/spinner_background"
        android:prompt="@string/select_danceClass_hint"
        android:spinnerMode="dropdown"
        app:layout_constraintBottom_toTopOf="@+id/signUpBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="177dp"
        android:layout_height="38dp"
        android:text="@string/SelectClient"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/clientSpinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.264"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>